fix: stop styling the wrapping element of the button

--- a/components/myft-concept-button/main.scss
+++ b/components/myft-concept-button/main.scss
@@ -220,7 +220,6 @@ $_myftConceptButtonThemes: (
 		'monochrome',
 	)
 ) {
-	.myft-concept-button,
 	.myft-concept-button__button {
 		@include _myftConceptButtonBase();
 	}
